[package]
name = "rust-security-toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1"
borsh = { version = "1", features = ["derive"] }
bs58 = "0.5"
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
solana-client = "4"
solana-sdk = "4.0.1"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "rts"
path = "src/main.rs"

[dev-dependencies]
solana-transaction-status = "4"
solana-transaction-status-client-types = "4"
